--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -417,8 +417,7 @@ color: black;
 }
 
 .logo-footer img{
-
-    height: 350px;
+   height: 250px;
     width: auto;
     transition: all 0.3s;
 }
@@ -437,6 +436,27 @@ footer{
 
 }
 
+@media screen and (min-width: 1270px){
+   
+    .carousel-container {
+        
+        margin-top: 0px;
+      }
+    
+      .texto2{
+        padding-top: 0px;
+      }
+      .secondary-carousel {
+       
+        margin-top: 0px;
+      
+      }
+    
+     
+      
+      
+        
+    }    
 /* Agrega estilos para una mejor adaptabilidad en pantallas pequeñas */
 @media screen and (max-width: 768px) {
     /* Ajusta el tamaño del logo en el header */
